# mailpit-api-client

./: .gitignore  CODE_OF_CONDUCT.md  README.adoc  README.rst  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: build-containers.yml  ci-template-workflow.yml  ci.yml  github_pages_static.yml  release.yml
docs/: about.rst  conf.py  development.rst  index.rst  installation.rst  testing.rst  usage.rst
docs/testing/: pytest.rst  testing.rst  unittest.rst
mailpit/: __init__.py  api.py  config.py  message.py  messages.py  models.py
mailpit/client/: api.py  message.py  messages.py  models.py
mailpit/client/models/: __init__.py  message.py  messages.py
mailpit/testing/: pytest.py  unittest.py
tests/: .dockerignore  test_unit_messages.py
tests/docker/: black.Dockerfile  docker-compose.yml  integration.Dockerfile  lint.Dockerfile  mypy.Dockerfile  unittest.Dockerfile
tests/integration/: __init__.py  conftest.py  tasks.py  test_api_message.py  test_api_messages.py  test_http_message.py  test_http_messages.py  test_smtp.py  test_testing_pytest.py  test_testing_unittest.py
tests/mail/: email_with_attachment.eml  email_with_attachment_and_inline_attachment.eml  email_with_inline_attachment.eml  email_without_attachment.eml
tests/unit/: tasks.py  test_api_message.py  test_api_messages.py  test_message.py  test_messages.py  test_models.py  test_unit_messages.py
