[tool.poetry]
name = "mailpit-api-client"
version = "0.1.0"
description = ""
authors = ["Lars Liedtke <lars@familie-liedtke.net>"]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses_json = "*"
httpx = "*"
ruff = "^0.0.259"
invoke = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^1.1.1"
pylint = "*"
respx = "*"
tox = "^4"

[tool.invoke.test]
python_versions = [
    "3.9",
    "3.10",
    "3.11",
    "3.12.0a6"
]