[tool.poetry]
name = "mailpit-api-client"
version = "0.1.0"
description = ""
authors = ["Lars Liedtke <lars@familie-liedtke.net>"]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses_json = "*"
httpx = "*"
ruff = "^0"
invoke = "^2.0.0"
logging518 = "^1.0.0"
pytest = "^7.3.1"
pytest-docker = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^1.1.1"
pylint = "*"
respx = "*"

[tool.invoke.test]
python_versions = [
    "3.9",
    "3.10",
    "3.11",
    "3.12-rc"
]
debian_codenames = [
    "buster",
    "bullseye",
]

checkers = [
    "black",
    "lint",
    "mypy"
]

[tool.logging]
version = 1

[tool.logging.formatters.formatter]
class = "logging.Formatter"
format = "%(asctime)s - %(levelname)s - %(pathname)s - line: %(lineno)s - %(funcName)s() - %(message)s"

[tool.logging.handlers.ch]
level = "DEBUG"
class = "logging.StreamHandler"
formatter = "formatter"

[tool.logging.loggers.test_runner]
level = "DEBUG"
handlers = ["ch"]

[tool.logging.loggers.test_runner.auxiliary]
propagate = false

[tool.logging.loggers.tests]
level = "DEBUG"
handlers = ["ch"]
