[project]
name = "mailpit-api-client"
version = "0.10.2"
description = "A Mailpit API Client"
authors = [{name = "Lars Liedtke", email = "lars@familie-liedtke.net"}]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]



dependencies = [
    "dataclasses_json",
    "httpx",
    "ruff",
    "invoke >= 2.0.0",
    "logging518 >= 1.0.0",
]


[project.optional-dependencies]
docs = [
    "sphinx",
]
test = [
    "black",
    "mypy>=1.1.1",
    "pylint",
    "respx",
    "pytest>=7",
]
pytest = [
    "pytest>=7",
]
build = [
    "build",
    "twine",
]

[project.urls]
repository = "https://github.com/Corvan/mailpit-api-client"


[tool.poetry]
name = "mailpit-api-client"
version = "0.10.1"
description = ""
authors = ["Lars Liedtke <lars@familie-liedtke.net>"]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses_json = "*"
httpx = "*"
ruff = "^0"
invoke = "^2.1.3"
logging518 = "^1.0.0"
pytest = "^7.3.1"
pytest-docker = "^1.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.test.dependencies]
black = "*"
mypy = "^1.1.1"
pylint = "*"
respx = "*"
pytest = "^7"

[tool.poetry.group.pytest.dependencies]
pytest = "^7"

[tool.poetry.group.build.dependencies]
build = "*"
twine = "*"

[tool.invoke.test]
python_versions = [
    "3.9",
    "3.10",
    "3.11",
    "3.12-rc"
]
debian_codenames = [
    "buster",
    "bullseye",
]

checkers = [
    "black",
    "lint",
    "mypy"
]

[tool.logging]
version = 1

[tool.logging.formatters.formatter]
class = "logging.Formatter"
format = "%(asctime)s - %(levelname)s - %(pathname)s - line: %(lineno)s - %(funcName)s() - %(message)s"

[tool.logging.handlers.ch]
level = "DEBUG"
class = "logging.StreamHandler"
formatter = "formatter"

[tool.logging.loggers.test_runner]
level = "DEBUG"
handlers = ["ch"]

[tool.logging.loggers.test_runner.auxiliary]
propagate = false

[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(levelname)s - %(pathname)s - line: %(lineno)s - %(funcName)s() - %(message)s"
